tests/hole_union_name_bad.stderr
tests/hole_union_name_bad.sl:2:7: error: SL2007: identifier '_' is reserved
