tests/hole_union_name_bad.sl
// Verifies hole union name is rejected.
union _ {}
